# AutoSINAPI

./: .dockerignore  .gitignore  README.md  autosinapi-completo.py  autosinapi_new.py  autosinapi_pipeline.py  database_manager.py  pyproject.toml  rastreador_xlsx.py  requirements.txt  setup.py  sinap_webscraping.py  sinapi_processor.py  sinapi_utils.py  sinapi_utils_new.py  sql_sinapi_insert_2024.py  sql_sinapi_insert_2025.py  update_requirements.py  workPlan.md
.github/: pull_request_template.md
.github/workflows/: release.yml  tests.yml
autosinapi/: __init__.py  config.py  etl_pipeline.py  exceptions.py  sinapi_utils.py
autosinapi.egg-info/: PKG-INFO
autosinapi/core/: database.py  downloader.py  pre_processor.py  processor.py
autosinapi/tools/: sinap_webscraping.py  sinapi_data_manager.py  sql_sinapi_insert.py  sql_sinapi_insert_2024.py
docs/: CONTRIBUTING.md  DataModel.md  nomenclaturas.md  workPlan.md
tests/: conftest.py  test_config.py  test_file_input.py  test_pipeline.py
tests/core/: test_database.py  test_downloader.py  test_processor.py
tools/: autosinapi_pipeline.py  pre_processador.py  rastreador_xlsx.py  sql_access copy.secrets.example  sql_sinapi_insert_2024.py  sql_sinapi_insert_2025.py
tools/docker/: Dockerfile  Makefile  docker-compose.yml
