[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autosinapi"
version = "0.1"
authors = [
    {name = "Lucas Antonio M. Pereira", email = "contato@arqlamp.com"},
]
description = "Pacote para automação do SINAPI"
readme = "README.md"
requires-python = ">=3.0"
dependencies = [
    "numpy",
    "openpyxl",
    "pandas",
    "requests",
    "setuptools",
    "sqlalchemy",
    "tqdm",
    "typing",
]
