[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autosinapi"
version = "0.1"
authors = [
    {name = "Lucas Antonio M. Pereira", email = "contato@arqlamp.com"},
]
description = "Toolkit para automação do SINAPI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "openpyxl",
    "pandas",
    "requests",
    "setuptools",
    "sqlalchemy",
    "tqdm",
    "typing",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=autosinapi"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["autosinapi"]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
